<resources>
    <string name="app_name">Database</string>
    <string name="action_settings">Settings</string>
    <string name="id_string">Product ID</string>
    <string name="id_string2">Not assigned</string>
    <string name="quantity_string">Product Quantity</string>
    <string name="delete_string">Delete</string>
    <string name="find_string">Find</string>
    <string name="add_string">Add</string>
    <string name="change_string">Change</string>
    <string name="enter_string">Enter</string>
</resources>
